--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
 
 /* Your CSS Code here. */
-.btn{background-color:black;color:white;border-radius:5px;border:none;}
+button{border:none;background-color:black;color:white;border-radius:5px}
+#btn:hover{
+	background-color: yellow;
+	color: black;
+	border-radius: 30px;}
